import org.apache.tools.ant.filters.ReplaceTokens

plugins {
  id 'com.gradleup.shadow' version '8.3.5'
  id 'java'
}

group 'com.btk5h.skript-mirror'
version '2.5.1'


repositories {
  mavenCentral()
  // Paper
  maven { url 'https://repo.papermc.io/repository/maven-public/' }
  // JitPack
  maven { url 'https://jitpack.io' }
}

dependencies {
  // Paper
  compileOnly("io.papermc.paper:paper-api:1.21.3-R0.1-SNAPSHOT")
  // Skript
  compileOnly('com.github.SkriptDev:Skript:3.0.0-Beta1')
  // bStats
  implementation(group: 'org.bstats', name: 'bstats-bukkit', version: '3.0.2')
}

processResources {
  filter ReplaceTokens, tokens: [
    "version": version
  ]
}

compileJava   {
  sourceCompatibility = 21
  targetCompatibility = 21
  options.encoding = 'UTF-8'
}

shadowJar {
  archiveFileName = project.name + "-" + project.version + ".jar"
  relocate("org.bstats", "com.btk5h.skriptmirror.metrics")
}

build {
  dependsOn(shadowJar)
  tasks.withType(JavaCompile).tap {
    configureEach {
      //options.compilerArgs.add("-Xlint:unchecked")
      options.compilerArgs.add("-Xlint:deprecation")
    }
  }
}
